...
import com.lmen918.retro.ui.theme.retrospectiveTheme
import dagger.hilt.android.AndroidEntryPoint
import kotlinx.coroutines.launch

const val NAV_HOME_TAG = "nav_home_tab"
const val NAV_JOURNALS_TAG = "nav_journals_tab"
const val NAV_SETTINGS_TAG = "nav_settings_tab"

private enum class AppScreen { RETROSPECTIVE, JOURNALS, SETTINGS }

@AndroidEntryPoint
class MainActivity : ComponentActivity() {
    override fun onCreate(savedInstanceState: Bundle?) {
...
